[tool.poetry]
name = "repl_python3_beta_JumpyGiftedMemoryallocator"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
werkzeug = "^1.0.1"
flask = "^1.1.2"
flask-autoindex = "^0.6.6"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
